<resources>
    <string name="app_name">WEKIT</string>
    <string name="network_error"><strong>네트워크 연결 끊김</strong>\n연결 상태 확인 후 다시 이용해주세요🙏</string>
    <string name="kakao_app_key">4bf95a8bc8e02e07223e286cac7df2b1</string>
    <string name="sendbird_app_key">CF664CC0-BBD9-4CFA-8AA5-4690F253660B</string>
    <string name="kakao_channel_id">_Fxdhxhs</string>
    <string name="notice_cd_dropdown">dropdown icon</string>
    <string name="percentage">%</string>
    <string name="cd_ic_back">icon back</string>
    <string name="cd_character_primary">primary character image</string>
    <string name="cd_ic_setting">icon setting</string>
    <string name="cd_ic_more">icon more black</string>
    <string name="guide_update">추후 업데이트 예정입니다.</string>
    <string name="password_validation">비밀번호는 영문, 숫자, 특수문자를 포함한 10~16자로 입력해주세요.</string>
    <string name="password_check">비밀번호가 일치하지 않습니다.</string>
    <string name="dialog_wekit_check">확인</string>
    <string name="dialog_wekit_cancel">취소</string>
    <string name="denied_permission">권한을 거부하시면 서비스이용이 어렵습니다. [설정] > [앱 권한]에서 권한을 허용해주세요.</string>
    <string name="splash_cd_logo">logo image</string>
    <string name="dialog_title_server_check">🚨<b> 긴급 점검 중</b>\n빠르게 해결할테니, 조금만 기다려주세요!</string>
    <string name="dialog_title_version_update"><b>새로운 버전의 위킷</b>\n반드시 필요한 최신 버전 업데이트가 있어요.\n업데이트 후 다시 만나요 🎶</string>
    <string name="login">로그인</string>
    <string name="login_first_wekit">WEKIT에 처음이신가요?</string>
    <string name="login_signup"><u>회원가입</u></string>
    <string name="login_id">ID</string>
    <string name="login_password">Password</string>
    <string name="login_id_validation">아이디 형식이 올바르지 않습니다.</string>
    <string name="login_pw_validation">패스워드 형식이 올바르지 않습니다.</string>
    <string name="signup">회원가입</string>
    <string name="signup_email">Email</string>
    <string name="signup_nickname">닉네임</string>
    <string name="signup_gender">성별</string>
    <string name="signup_man">남자</string>
    <string name="signup_woman">여자</string>
    <string name="signup_birthday">생년월일</string>
    <string name="signup_id">ID</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_password_check">비밀번호 확인</string>
    <string name="signup_complete">완료</string>
    <string name="signup_tnc">이용약관</string>
    <string name="signup_and">및</string>
    <string name="signup_personal_info">개인정보처리방침</string>
    <string name="signup_agree">에 동의합니다.</string>
    <string name="signup_email_validation">이메일 형식이 올바르지 않습니다.</string>
    <string name="signup_nickname_validation">닉네임은 10자 이내의 한글로 입력해주세요.</string>
    <string name="signup_id_validation">아이디는 대/소문자, 숫자를 포함한 6~15자로 입력해주세요.</string>
    <string name="signup_birthday_validation">생년월일 형식이 올바르지 않습니다. ex) YYYY\-mm\-dd</string>
    <string name="signup_agree_rule">이용약관 및 개인정보처리방침에 동의해주세요.</string>
    <string name="poll">설문조사</string>
    <string name="poll_height">키</string>
    <string name="poll_weight">몸무게</string>
    <string name="poll_target_weight">목표몸무게</string>
    <string name="poll_complete">확인</string>
    <string name="tutorial_step_01">나와 같은 목표를 가진\n<b>채팅방을 검색</b>해보세요</string>
    <string name="tutorial_step_02">인증한 사진을\n<b>일기로 기록</b>하세요</string>
    <string name="tutorial_step_03"><b>식단을 인증</b>하고,\n<b>일상을 공유</b>해보세요</string>
    <string name="tutorial_step_04">얼마나 꾸준히 했는지\n<b>캘린더로 확인</b>해보세요</string>
    <string name="tutorial_next">NEXT</string>
    <string name="tutorial_start">START</string>
    <string name="tutorial_cd_tutorial_img">tutorial image</string>
    <string name="chat_chatting">채팅</string>
    <string name="chat_send_message_hint">메시지를 입력해 주세요</string>
    <string name="chat_cd_ic_menu">menu icon</string>
    <string name="chat_cd_ic_send_message">send message icon</string>
    <string name="chat_cd_send_picture_button_img">send picture icon</string>
    <string name="chat_cd_profile_img">profile img</string>
    <string name="chat_nav_menu_button_img">navigation menu icon</string>
    <string name="chat_nav_bell_img">navigation bell icon</string>
    <string name="chat_nav_exit_img">navigation exit icon</string>
    <string name="chat_message_img">image file message</string>
    <string name="chat_dialog_send_auth">인증 사진 보내기</string>
    <string name="chat_dialog_send_normal">일반 사진 보내기</string>
    <string name="chat_dialog_expel_member_name">추방할 멤버 이름</string>
    <string name="chat_dialog_expel_reason">추방 사유</string>
    <string name="chat_dialog_expel">추방하기</string>
    <string name="chat_dialog_expel_member">멤버 추방하기</string>
    <string name="chat_dialog_report">신고하기</string>
    <string name="chat_dialog_report_room">방 신고하기</string>
    <string name="chat_dialog_report_reason">신고 사유</string>
    <string name="chat_dialog_exit_title">채팅방을 나가시겠습니까?</string>
    <string name="chat_dialog_exit_complete">나가기</string>
    <string name="chat_dialog_exit_cancel">취소</string>
    <string name="chat_challenge_start">챌린지 시작</string>
    <string name="chat_member_host_img">chat member host icon</string>
    <string name="chat_dialog_badge_img">chat dialog badge image</string>
    <string name="chat_dialog_cancel_img">chat dialog cancel image</string>
    <string name="chat_send_auth_img">chat send auth image</string>
    <string name="chat_send_normal_img">chat send normal image</string>
    <string name="channel_list">채팅방 목록</string>
    <string name="channel_search_chat_room_img">search chat room icon</string>
    <string name="channel_create_chat_room_img">create chat room icon</string>
    <string name="channel_reset">reset</string>
    <string name="channel_my_chat_room">MY 채팅방</string>
    <string name="channel_my_chat_room_img">my chat room icon</string>
    <string name="channel_lookup_chat_room">새로 올라온 채팅방</string>
    <string name="channel_myroom_no_room_img">channel no room icon</string>
    <string name="channel_no_room_main">아직 참여중인 채팅방이 없으시네요!</string>
    <string name="channel_no_room_sub">마음에 드는 채팅방에 입장하여\n같은 목표를 가진 멤버들과 함께 달려보세요.</string>
    <string name="channel_look_all_room">모든 채팅방 보기</string>
    <string name="channel_lookup_recent_chat_room">최신순으로 정렬됩니다</string>
    <string name="channel_filter_setting">필터 설정</string>
    <string name="channel_keyword_suggestion">이런 키워드는 어떠세요?</string>
    <string name="channel_filter_img">channel filter icon</string>
    <string name="channel_cancel_chat_room_img">cancel chat room icon</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="diary">Diary</string>
    <string name="home_title">WEKIT</string>
    <string name="home_greeting_default"><b>WEKIT</b>과\n오늘도 함께해요!</string>
    <string name="home_greeting">\n오늘도 함께해요!</string>
    <string name="home_certification_title">우리의 도전은 시작되었어!</string>
    <string name="home_certification_sub_title">참여하고 계신 채팅방의 챌린지 진행 정도입니다.</string>
    <string name="home_certification_words">새로운 다짐이 참 멋져보이는걸요?</string>
    <string name="home_certification_counts">0/0</string>
    <string name="home_certification_percentage">0%</string>
    <string name="home_target_weight_title">목표 몸무게 : </string>
    <string name="home_target_weight_sub_title">목표몸무게에 가까워지고 있나요? </string>
    <string name="home_cd_bg_character">character background image</string>
    <string name="home_cd_text_logo">home text logo icon</string>
    <string name="permission_title">슬기로운 WEKIT 이용에 꼭 필요한 권한들을 소개할게요.</string>
    <string name="permission_camera_label">카메라</string>
    <string name="permission_camera_content">프로필,인증 사진 등을 위해 사진을\n촬영합니다.</string>
    <string name="permission_gallery_label">사진 앨범</string>
    <string name="permission_gallery_content">프로필,인증 사진 등을 위해 파일을\n촬영합니다.</string>
    <string name="permission_alarm_label">알림</string>
    <string name="permission_alarm_content">멤버들의 채팅을 실시간으로 확인\n할 수 있습니다.</string>
    <string name="permission_keep">계속하기</string>
    <string name="permission_cd_ic_camera">camera icon</string>
    <string name="permission_cd_ic_gallery">gallery icon</string>
    <string name="permission_cd_ic_alarm">alarm icon</string>
    <string name="diary_title">식단일기</string>
    <string name="diary_sunday">Sun</string>
    <string name="diary_monday">Mon</string>
    <string name="diary_tuesday">Tue</string>
    <string name="diary_wednesday">Wed</string>
    <string name="diary_thursday">Thu</string>
    <string name="diary_friday">Fri</string>
    <string name="diary_saturday">Sat</string>
    <string name="diary_warning_future_day">현재나 과거의 일기만 작성할 수 있습니다.</string>
    <string name="diary_cd_img_thumbnail">image thumbnail</string>
    <string name="diary_cd_ic_satisfaction">icon satisfaction</string>
    <string name="write_diary">식단일기</string>
    <string name="write_diary_write">식단작성</string>
    <string name="write_diary_edit">편집</string>
    <string name="write_diary_satisfaction">음식 만족도</string>
    <string name="write_diary_meal">식사</string>
    <string name="write_diary_breakfast">아침</string>
    <string name="write_diary_blunch">아점</string>
    <string name="write_diary_lunch">점심</string>
    <string name="write_diary_linner">점저</string>
    <string name="write_diary_dinner">저녁</string>
    <string name="write_diary_time">시간</string>
    <string name="write_diary_memo">메모</string>
    <string name="write_diary_memo_hint">간단한 메모를 남겨주세요.(선택)</string>
    <string name="write_diary_not_match_date">날짜가 일치하지 않습니다.</string>
    <string name="write_diary_max_photo_count">사진은 최대 5개까지 첨부가능합니다.</string>
    <string name="write_diary_save">저장하기</string>
    <string name="write_diary_send">보내기</string>
    <string name="write_diary_cd_photo">diary photo image</string>
    <string name="write_diary_cd_satisfaction">satisfaction icon</string>
    <string name="wirte_diary_cd_default_img">diary default image</string>
    <string name="edit_photo">사진편집</string>
    <string name="edit_sav_image">이미지 저장</string>
    <string name="edit_photo_cut">자르기</string>
    <string name="edit_photo_save">저장하기</string>
    <string name="edit_photo_cd_image">item image</string>
    <string name="edit_photo_cd_add_icon">item add icon</string>
    <string name="edit_photo_cd_cancel_icon">item cancel icon</string>
    <string name="create_channel_title_text">방 만들기</string>
    <string name="create_channel_cancel_img">create channel cancel icon</string>
    <string name="create_channel_name">채팅방 이름</string>
    <string name="create_channel_explain">방 설명</string>
    <string name="create_channel_duration">방기간</string>
    <string name="create_channel_two_week_challenge">2주 도전방</string>
    <string name="create_channel_four_week_challenge">한달 도전방</string>
    <string name="create_channel_auth_count">하루 인증 횟수</string>
    <string name="create_channel_member_count">방인원</string>
    <string name="create_channel_tag">방 태그</string>
    <string name="create_channel_add_tag">입력</string>
    <string name="create_channel_cancel">취소</string>
    <string name="create_channel_complete">완료</string>
    <string name="create_channel_name_hint">2글자~20자리로 입력해주세요</string>
    <string name="create_channel_explain_hint">50글자 이하로 작성해주세요 </string>
    <string name="create_channel_tag_hint">최대 5개까지 가능합니다.</string>
    <string name="enter_channel_cancel_img">enter channel cancel icon</string>
    <string name="channel_filter_auth_count">하루 인증 횟수</string>
    <string name="channel_filter_one">1번</string>
    <string name="channel_filter_five">5번</string>
    <string name="channel_filter_duration">기간</string>
    <string name="channel_filter_two_week">2주방</string>
    <string name="channel_filter_four_week">한달방</string>
    <string name="channel_filter_recruit_count">모집 인원</string>
    <string name="channel_filter_challenge_progress">챌린지 진행 상황</string>
    <string name="channel_filter_ongoing_progress">진행 중</string>
    <string name="channel_filter_before_progress">시작 전</string>
    <string name="channel_filter_apply">적용하기</string>
    <string name="channel_filter_reset">초기화</string>
</resources>