<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_top_rounding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/permission_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission_title"
        android:fontFamily="@font/notosanskr_medium"
        android:textSize="20sp"
        android:textColor="@color/permission_title"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/permission_camera_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/icn_camera_basic_black"
        android:contentDescription="@string/permission_cd_ic_camera"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_title_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/permission_camera_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_camera_label"
        android:fontFamily="@font/notosanskr_medium"
        android:textSize="18sp"
        android:textColor="@color/permission_info_label"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_title_tv"
        app:layout_constraintStart_toEndOf="@+id/permission_camera_iv"/>

    <TextView
        android:id="@+id/permission_camera_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_camera_content"
        android:fontFamily="@font/notosanskr_regular"
        android:textSize="16sp"
        android:textColor="@color/permission_info_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_camera_label_tv"
        app:layout_constraintStart_toEndOf="@+id/permission_camera_iv"/>

    <ImageView
        android:id="@+id/permission_gallery_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/icn_photo_basic_black"
        android:contentDescription="@string/permission_cd_ic_gallery"
        android:layout_marginTop="35dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_camera_content_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/permission_gallery_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_gallery_label"
        android:fontFamily="@font/notosanskr_medium"
        android:textSize="18sp"
        android:textColor="@color/permission_info_label"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_camera_content_tv"
        app:layout_constraintStart_toEndOf="@+id/permission_camera_iv"/>

    <TextView
        android:id="@+id/permission_gallery_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_gallery_content"
        android:fontFamily="@font/notosanskr_regular"
        android:textSize="16sp"
        android:textColor="@color/permission_info_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_gallery_label_tv"
        app:layout_constraintStart_toEndOf="@+id/permission_camera_iv"/>

    <ImageView
        android:id="@+id/permission_alarm_iv"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/icn_bell_on_dark"
        android:contentDescription="@string/permission_cd_ic_alarm"
        android:layout_marginTop="37dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_gallery_content_tv"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/permission_alarm_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_alarm_label"
        android:fontFamily="@font/notosanskr_medium"
        android:textSize="18sp"
        android:textColor="@color/permission_info_label"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_gallery_content_tv"
        app:layout_constraintStart_toEndOf="@+id/permission_camera_iv"/>

    <TextView
        android:id="@+id/permission_alarm_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_alarm_content"
        android:fontFamily="@font/notosanskr_regular"
        android:textSize="16sp"
        android:textColor="@color/permission_info_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_alarm_label_tv"
        app:layout_constraintStart_toEndOf="@+id/permission_camera_iv"/>

    <TextView
        android:id="@+id/permission_keep_tv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/permission_keep"
        android:fontFamily="@font/notosanskr_regular"
        android:textColor="@color/permission_info_button_text"
        android:textSize="16sp"
        android:gravity="center"
        android:background="@color/permission_info_button"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/permission_alarm_content_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>