<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_chat_dialog"
    android:orientation="vertical">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_dialog_auth_layout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/chat_dialog_auth_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/chat_dialog_send_auth"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/icn_photo_confirm"
            android:contentDescription="@string/chat_send_auth_img" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chat_dialog_normal_layout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:id="@+id/chat_dialog_normal_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:text="@string/chat_dialog_send_normal"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/dark_gray"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/icn_photo_basic"
            android:contentDescription="@string/chat_send_normal_img" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>