<?xml version="1.0" encoding="utf-8"?>
<layout tools:context=".ChannelFilterActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.coconutplace.wekit.ui.channel_filter.ChannelFilterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/channel_filter_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:text="@string/channel_filter_setting"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:fontFamily="@font/notosanskr_regular" />

        <FrameLayout
            android:id="@+id/channel_filter_back_layout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="7dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@color/white"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_ic_back"
                android:foreground="@drawable/icn_cancel_black" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            app:layout_constraintTop_toBottomOf="@id/channel_filter_title_text"/>

        <TextView
            android:id="@+id/channel_filter_auth_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/channel_filter_title_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="29dp"
            android:layout_marginStart="20dp"
            android:text="@string/channel_filter_auth_count"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_medium"/>

        <TextView
            android:id="@+id/channel_filter_current_auth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/channel_filter_auth_count_text"
            app:layout_constraintStart_toEndOf="@+id/channel_filter_auth_count_text"
            android:layout_marginStart="10dp"
            android:text=""
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/notosanskr_regular"/>

        <SeekBar
            android:id="@+id/channel_filter_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/channel_filter_auth_count_text"
            android:layout_marginTop="26dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:progressDrawable="@drawable/bg_channel_filter_seekbar"
            android:background="@color/transparent"
            android:splitTrack="false"
            android:max="4"
            android:progress="@{viewModel.authCount}"
            android:thumb="@drawable/icn_seekbar_thumb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/channel_filter_seekbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:text="@string/channel_filter_one"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:fontFamily="@font/notosanskr_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/channel_filter_seekbar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:text="@string/channel_filter_five"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:fontFamily="@font/notosanskr_regular"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/channel_filter_seekbar"
            android:layout_marginTop="53dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/channel_filter_duration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/channel_filter_seekbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="84dp"
            android:layout_marginStart="20dp"
            android:text="@string/channel_filter_duration"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_medium"/>

        <RadioGroup
            android:id="@+id/channel_filter_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/channel_filter_duration_text"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/channel_filter_two_week_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:text="@string/channel_filter_two_week"
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:fontFamily="@font/notosanskr_regular"/>

            <RadioButton
                android:id="@+id/channel_filter_four_week_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/primary"
                android:text="@string/channel_filter_four_week"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:fontFamily="@font/notosanskr_regular"/>
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/channel_filter_radio_group"
            android:layout_marginTop="30dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/channel_filter_recruit_count_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/channel_filter_radio_group"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="72dp"
            android:layout_marginStart="20dp"
            android:text="@string/channel_filter_recruit_count"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_medium"/>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/channel_filter_recruit_count_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_vertical"
            android:layout_marginEnd="55dp">
            
            <Button
                android:id="@+id/channel_filter_member_count_minus_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:foreground="@drawable/icn_circle_minus"/>

            <TextView
                android:id="@+id/channel_filter_member_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text=""
                android:textColor="@color/primary"
                android:textSize="14sp"
                android:fontFamily="@font/notosanskr_regular" />

            <Button
                android:id="@+id/channel_filter_member_count_plus_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:foreground="@drawable/icn_circle_plus"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@+id/channel_filter_recruit_count_text"
            android:layout_marginTop="40dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/channel_filter_challenge_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/channel_filter_recruit_count_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="71dp"
            android:layout_marginStart="20dp"
            android:text="@string/channel_filter_challenge_progress"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="@font/notosanskr_medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/channel_filter_challenge_progress_text"
            android:layout_marginTop="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/channel_filter_ongoing_process_button"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bg_channel_filter_checked_button"
                android:text="@string/channel_filter_ongoing_progress"
                android:textColor="@color/primary"
                android:textSize="12sp"
                android:fontFamily="@font/notosanskr_regular"
                android:stateListAnimator="@null"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/channel_filter_before_process_button"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:background="@drawable/bg_channel_filter_unchecked_button"
                android:text="@string/channel_filter_before_progress"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:fontFamily="@font/notosanskr_regular"
                android:stateListAnimator="@null"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>

        <Button
            android:id="@+id/channel_filter_reset_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintWidth_percent="0.34"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/channel_filter_reset_button"
            android:text="@string/channel_filter_reset"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center" />


        <Button
            android:id="@+id/channel_filter_apply_button"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintWidth_percent="0.66"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/primary"
            android:text="@string/channel_filter_apply"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/notosanskr_medium"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
